SmallImprovementsOnLambdaExpressions